Implemented first version of item editor, with converting to task/note/list

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -119,6 +119,7 @@
 
   <script src="static/app/main/ConvertService.js"></script>
   <script src="static/app/main/ItemsController.js"></script>
+  <script src="static/app/main/ItemEditorController.js"></script>
   <script src="static/app/main/itemsFilter.js"></script>
   <script src="static/app/main/ItemsService.js"></script>
   <script src="static/app/main/EditorController.js"></script>
