--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -23,7 +23,7 @@
     <div ng-if="isFeatureActive('list')" class="group-mixed">
       <div class="group-mixed--middle">
         <a href class="link-menu highlighted" ng-click="gotoFeature('list', getActiveList())">
-          <span class="text-navigation-menu-small" ng-bind="getActiveList().title"></span>
+          <span class="text-navigation-menu-small" clamp=2 ng-bind="getActiveList().title"></span>
         </a>
       </div>
       <div class="group-mixed--right">
@@ -36,7 +36,7 @@
     ng-hide="favoriteList === getActiveList()">
       <div class="group-mixed--middle">
         <a href class="link-menu" ng-click="gotoFeature('list', favoriteList)">
-          <span class="text-navigation-menu-small" ng-bind="favoriteList.title"></span>
+          <span class="text-navigation-menu-small" clamp=2 ng-bind="favoriteList.title"></span>
         </a>
       </div>
       <div class="group-mixed--right">
