--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -56,7 +56,7 @@
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <div class="group-symmetrical--middle">
               <a href ng-if="task.transientProperties.date" ng-click="openExpand()">
-                <span class="text-move"></span>
+                <span class="text-calendar"></span>
               </a>
             </div>
             <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right link-navigation">
