Aligned heading properly to match focus in menu.

--- a/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
@@ -1,4 +1,4 @@
-<div id="entry" class="container-master" ng-controller="EntryController" vertical-resize="entry">
+<div id="entry" class="container-master entry" ng-controller="EntryController" vertical-resize="entry">
   <div class="container-fluid">
     <div class="swiper-container container-fluid--inner" swiper-container="entry" swiper-type="main" expected-slides="3" swiper-container-slide-changed="entrySwiperSlideChanged(path, activeIndex)">
       <div class="swiper-wrapper">
