--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -247,7 +247,7 @@
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" ng-click="openDatepicker(daySlides[2].info)">
-                  <h2 ng-bind="daySlides[2].heading"></h2>
+                  <h2 class="group-heading justified" ng-bind="daySlides[2].heading"></h2>
                 </div>
                 <div class="group-mixed--right" task-list-completed="rightDuplicateTasksDate"></div>
               </div>
@@ -272,7 +272,7 @@
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" ng-click="openDatepicker(daySlides[0].info)">
-                  <h2 ng-bind="daySlides[0].heading"></h2>
+                  <h2 class="group-heading justified" ng-bind="daySlides[0].heading"></h2>
                 </div>
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
@@ -298,7 +298,7 @@
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" ng-click="openDatepicker(daySlides[1].info)">
-                  <h2 ng-bind="daySlides[1].heading"></h2>
+                  <h2 class="group-heading justified" ng-bind="daySlides[1].heading"></h2>
                 </div>
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
@@ -324,7 +324,7 @@
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" ng-click="openDatepicker(daySlides[2].info)">
-                  <h2 ng-bind="daySlides[2].heading"></h2>
+                  <h2 class="group-heading justified" ng-bind="daySlides[2].heading"></h2>
                 </div>
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
@@ -350,7 +350,7 @@
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" ng-click="openDatepicker(daySlides[0].info)">
-                  <h2 ng-bind="daySlides[0].heading"></h2>
+                  <h2 class="group-heading justified" ng-bind="daySlides[0].heading"></h2>
                 </div>
                 <div class="group-mixed--right" task-list-completed></div>
               </div>
