--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -1,8 +1,8 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
   <section class="container-content" list="allNotes" list-order="top" list-recent list-open="openEditor('note', {})">
     <div class="group-mixed heading">
-      <div class="group-mixed--middle">
-        <h2>recent</h2>
+      <div class="group-mhixed--middle">
+        <h2 class="group-heading justified row">recent</h2>
       </div>
     </div>
     <div class="animate-list-item-leave tall"
