--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -2,7 +2,7 @@
   <section class="container-content" list="allActiveTasks" list-order="top" list-recent swiper-prevent>
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
-        <h2>recent</h2>
+        <h2 class="group-heading justified">recent</h2>
       </div>
       <div class="group-mixed--right" task-list-completed></div>
     </div>
