--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -1,7 +1,7 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container>
   <section class="container-content" scroll-to>
     <div list>
-      <h2 class="group-heading row">archived</h2>
+      <h2 class="group-heading justified row">archived</h2>
       <div class="animate-list-item-leave"
       ng-repeat="archivedList in archivedLists | limitTo: currentListLimitTo"
       list-item="archivedLists.length" ng-include="'static/app/lists/listListItem.html'"></div>
