--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -13,6 +13,8 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
     </textarea>
   </div>
   <div class="group-mixed--right">
-    <a href editable-field-deactivate ng-click="openTaskEditor(newItem)">&gt;</a>
+    <a href class="link-navigation" editable-field-deactivate ng-click="openTaskEditor(newItem)">
+      <span class="text-navigation-forward"></span>
+    </a>
   </div>
 </form>
