--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container>
-  <section class="container-content" scroll-to>
+  <section class="container-content">
     <div list>
       <h2 class="group-heading justified row">archived</h2>
       <div class="animate-list-item-leave"
