--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section class="container-content" scroll-to>
+  <section class="container-content">
     <div ng-if="context" accordion>
       <div accordion-title="context" edit-item="editContext(context)" edit-item-inline="true" edit-item-fields="editContextFields(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
       <div ng-if="isOpen(context)" class="swiper-no-swiping" editable-field-container="auto">
