--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('user')" drawer-handle="left">
-  <section class="container-content" scroll-to>
+  <section class="container-content">
     <h2 class="group-heading row">online</h2>
 
     <div ng-if="useCollectives()">
