--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section ng-init="newContext={title:undefined, tagType:'context'}" class="container-content" scroll-to>
+  <section ng-init="newContext={title:undefined, tagType:'context'}" class="container-content">
     <h3>contexts</h3>
     <ul>
       <li ng-show="contexts.length" ng-repeat="context in contexts">
