--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -1,18 +1,18 @@
 <div class="container-content--outer" ng-if="isFeatureActive('user')">
-  <section ng-if="activeDetails === 'account'" class="container-content" scroll-to>
+  <section ng-if="activeDetails === 'account'" class="container-content">
     <h2 class="group-heading row">account</h2>
     <a href>change password</a>
     <a href>change email</a>
   </section>
 
-  <section ng-if="activeDetails === 'settings'" class="container-content" scroll-to>
+  <section ng-if="activeDetails === 'settings'" class="container-content">
     <h2 class="group-heading row">settings</h2>
     <input type="checkbox" id="showOnboarding" ng-model="settings.showOnboarding" ng-change="onboardingChecked(settings.showOnboarding)"/>
     <label for="showOnboarding" class="default-element font-small">show onboarding on next login</label>
     <input type="checkbox" id="hideFooter" ng-model="settings.hideFooter" ng-change="hideFooter(settings.hideFooter)"/>
     <label for="hideFooter" class="default-element font-small">hide footer on mobile</label>
   </section>
-  <section ng-if="activeDetails === 'about'" class="container-content" scroll-to>
+  <section ng-if="activeDetails === 'about'" class="container-content">
     <h2 class="group-heading row">about</h2>
     <a class="highlighted-link" href ng-click="openTermsOfServiceModal()">terms of service</a><br/>
     <a class="highlighted-link" href ng-click="openPrivacyPolicyModal()">privacy policy</a>
