Tweaked menu layout

--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -48,7 +48,7 @@
     <div class="container-menu--push"></div>
   </div>
   <div class="container-menu--bottom">
-    <a href class="link-menu downplayed row" ng-click="gotoFeature('trash')"
+    <a href class="link-menu height-large downplayed row" ng-click="gotoFeature('trash')"
     ng-class="isFeatureActive('trash') && 'active'">
       <span class="text-navigation-menu-small">trash</h4>
     </a>
