--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -29,7 +29,7 @@
         <footer class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-click="clickFavorite()" class="group-symmetrical--left">
-              <span class="text-star"></span>
+              <span class="text-star" ng-class="!isFavoriteList(list) && 'inactive'"></span>
             </a>
             <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
