--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -13,6 +13,8 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
     </textarea>
   </div>
   <div class="group-mixed--right">
-    <a href editable-field-deactivate ng-click="openEditor('list', newItem)">&gt;</a>
+    <a href editable-field-deactivate ng-click="openEditor('list', newItem)">
+      <span class="text-navigation-forward"></span>
+    </a>
   </div>
 </form>
