--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -8,6 +8,7 @@
     <div class="animate-list-item-leave tall"
     ng-repeat="note in getList() | orderBy:'modified':true | limitTo: currentListLimitTo"
     list-item="getList().length" ng-include="'static/app/notes/noteListItem.html'"></div>
+    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('notes')"></footer>
 </div>
