--- a/frontend/core/src/main/webapp/static/app/tasks/taskListCompleted.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListCompleted.html
@@ -2,3 +2,4 @@
 ng-click="toggleShowCompletedTasks()">
   <span class="text-toggle-completed"></span>
 </button>
+<span style="position:absolute;" ng-if="isCompletedDisabled() || !containsCompleted()">&nbsp;</span>
