Added context editor

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -69,6 +69,7 @@
   <script src="static/app/base/ModalService.js"></script>
   <script src="static/app/base/SwiperService.js"></script>
   <script src="static/app/base/swiperClickDirective.js"></script>
+  <script src="static/app/base/TagEditorController.js"></script>
   <script src="static/app/base/TagsController.js"></script>
   <script src="static/app/base/TagsService.js"></script>
   <script src="static/app/base/UISessionService.js"></script>
