--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -3,7 +3,10 @@
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2 class="group-heading long justified">
-          <span class="text-heading" ng-bind="context ? '@' + context.title : 'no context'" clamp=2></span>
+          <a ng-if="context" href ng-click="openEditor('tag', context)">
+            <span class="text-heading" ng-bind="context ? '@' + context.title : 'no context'" clamp=2></span>
+          </a>
+          <span ng-if="!context" class="text-heading" ng-bind="context ? '@' + context.title : 'no context'" clamp=2></span>
         </h2>
       </div>
       <div class="group-mixed--right" task-list-completed></div>
